[gd_scene load_steps=57 format=3 uid="uid://bh2xfihntbwfq"]

[ext_resource type="Script" uid="uid://fiydt1ylrj8u" path="res://Scripts/Complex Enemy.gd" id="1_ad176"]
[ext_resource type="Texture2D" uid="uid://bicitkvq6t0c4" path="res://Assets/Enemy Assets/Bringer-Of-Death/SpriteSheet/Bringer-of-Death-SpritSheet.png" id="1_vjjuq"]
[ext_resource type="PackedScene" uid="uid://csiimkywevom7" path="res://Scenes/Hurtbox.tscn" id="3_klabn"]
[ext_resource type="Script" uid="uid://ccjfqwc5vm62o" path="res://Scripts/Health.gd" id="4_dsgul"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bwkyk"]
atlas = ExtResource("1_vjjuq")
region = Rect2(560, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gjqy"]
atlas = ExtResource("1_vjjuq")
region = Rect2(700, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkfpv"]
atlas = ExtResource("1_vjjuq")
region = Rect2(840, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_daqum"]
atlas = ExtResource("1_vjjuq")
region = Rect2(980, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_ucet0"]
atlas = ExtResource("1_vjjuq")
region = Rect2(0, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3coo"]
atlas = ExtResource("1_vjjuq")
region = Rect2(140, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_0y2pv"]
atlas = ExtResource("1_vjjuq")
region = Rect2(0, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdfq0"]
atlas = ExtResource("1_vjjuq")
region = Rect2(140, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2gu4"]
atlas = ExtResource("1_vjjuq")
region = Rect2(280, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kcw4"]
atlas = ExtResource("1_vjjuq")
region = Rect2(420, 186, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgby4"]
atlas = ExtResource("1_vjjuq")
region = Rect2(980, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_hph8k"]
atlas = ExtResource("1_vjjuq")
region = Rect2(0, 465, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_vex7o"]
atlas = ExtResource("1_vjjuq")
region = Rect2(140, 465, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2d6r"]
atlas = ExtResource("1_vjjuq")
region = Rect2(280, 465, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvb5w"]
atlas = ExtResource("1_vjjuq")
region = Rect2(420, 465, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_ped2k"]
atlas = ExtResource("1_vjjuq")
region = Rect2(560, 465, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5olq"]
atlas = ExtResource("1_vjjuq")
region = Rect2(700, 465, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jk3v"]
atlas = ExtResource("1_vjjuq")
region = Rect2(840, 465, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8ahu"]
atlas = ExtResource("1_vjjuq")
region = Rect2(980, 465, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2vm0"]
atlas = ExtResource("1_vjjuq")
region = Rect2(700, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_84dcu"]
atlas = ExtResource("1_vjjuq")
region = Rect2(840, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_lchxl"]
atlas = ExtResource("1_vjjuq")
region = Rect2(980, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_dysov"]
atlas = ExtResource("1_vjjuq")
region = Rect2(0, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_py452"]
atlas = ExtResource("1_vjjuq")
region = Rect2(140, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0bli"]
atlas = ExtResource("1_vjjuq")
region = Rect2(280, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdxol"]
atlas = ExtResource("1_vjjuq")
region = Rect2(420, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_7bjfj"]
atlas = ExtResource("1_vjjuq")
region = Rect2(560, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_bm6iy"]
atlas = ExtResource("1_vjjuq")
region = Rect2(700, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_3toae"]
atlas = ExtResource("1_vjjuq")
region = Rect2(840, 372, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4img"]
atlas = ExtResource("1_vjjuq")
region = Rect2(280, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldn1v"]
atlas = ExtResource("1_vjjuq")
region = Rect2(420, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_ges6o"]
atlas = ExtResource("1_vjjuq")
region = Rect2(560, 279, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad176"]
atlas = ExtResource("1_vjjuq")
region = Rect2(0, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_kri20"]
atlas = ExtResource("1_vjjuq")
region = Rect2(140, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rpcp"]
atlas = ExtResource("1_vjjuq")
region = Rect2(280, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8v7p"]
atlas = ExtResource("1_vjjuq")
region = Rect2(420, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt1my"]
atlas = ExtResource("1_vjjuq")
region = Rect2(560, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg8tc"]
atlas = ExtResource("1_vjjuq")
region = Rect2(700, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xirk"]
atlas = ExtResource("1_vjjuq")
region = Rect2(840, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_domkq"]
atlas = ExtResource("1_vjjuq")
region = Rect2(980, 0, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjjuq"]
atlas = ExtResource("1_vjjuq")
region = Rect2(0, 93, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_oab2r"]
atlas = ExtResource("1_vjjuq")
region = Rect2(140, 93, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_a7bbw"]
atlas = ExtResource("1_vjjuq")
region = Rect2(280, 93, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_0o34m"]
atlas = ExtResource("1_vjjuq")
region = Rect2(420, 93, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_taqhm"]
atlas = ExtResource("1_vjjuq")
region = Rect2(560, 93, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mga2"]
atlas = ExtResource("1_vjjuq")
region = Rect2(700, 93, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxpcs"]
atlas = ExtResource("1_vjjuq")
region = Rect2(840, 93, 140, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruokv"]
atlas = ExtResource("1_vjjuq")
region = Rect2(980, 93, 140, 93)

[sub_resource type="SpriteFrames" id="SpriteFrames_mvyao"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwkyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gjqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkfpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_daqum")
}],
"loop": false,
"name": &"1attack",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ucet0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3coo")
}],
"loop": false,
"name": &"1holster",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0y2pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdfq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2gu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kcw4")
}],
"loop": false,
"name": &"1windup",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgby4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hph8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vex7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2d6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvb5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ped2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5olq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jk3v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8ahu")
}],
"loop": false,
"name": &"ability",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2vm0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84dcu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lchxl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dysov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_py452")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0bli")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdxol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7bjfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bm6iy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3toae")
}],
"loop": false,
"name": &"death",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4img")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldn1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ges6o")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad176")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kri20")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rpcp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8v7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt1my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg8tc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xirk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_domkq")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjjuq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oab2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a7bbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0o34m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_taqhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mga2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxpcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruokv")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vjjuq"]
radius = 16.0
height = 54.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kri20"]
size = Vector2(78.8, 66.4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3rpcp"]
size = Vector2(64.4, 68.4)

[node name="Complex Enemy" type="CharacterBody2D"]
scale = Vector2(2.5, 2.5)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_ad176")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(-37, -9)
sprite_frames = SubResource("SpriteFrames_mvyao")
animation = &"ability"
autoplay = "idle"

[node name="Collisionbox" type="CollisionShape2D" parent="."]
light_mask = 0
position = Vector2(0, 10)
shape = SubResource("CapsuleShape2D_vjjuq")

[node name="Floor Raycast" type="RayCast2D" parent="."]
position = Vector2(-17, 6)
target_position = Vector2(0, 47)

[node name="Wall Raycast" type="RayCast2D" parent="."]
position = Vector2(-17, 6)
target_position = Vector2(-13, 0)

[node name="Hurtbox" parent="." instance=ExtResource("3_klabn")]
collision_mask = 2
damage = 50.0

[node name="Hurtbox Collision" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-63.4, 4.8)
shape = SubResource("RectangleShape2D_kri20")
disabled = true

[node name="Detectionbox" type="Area2D" parent="."]
light_mask = 0
visibility_layer = 1023
collision_layer = 0
collision_mask = 2

[node name="Detectionbox Collision" type="CollisionShape2D" parent="Detectionbox"]
position = Vector2(-51.8, 5.00001)
shape = SubResource("RectangleShape2D_3rpcp")

[node name="Health" type="Node" parent="."]
script = ExtResource("4_dsgul")
maxHealth = 50.0
metadata/_custom_type_script = "uid://ccjfqwc5vm62o"

[connection signal="animation_finished" from="Sprite" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Detectionbox" to="." method="_on_detect_player_body_entered"]
[connection signal="body_exited" from="Detectionbox" to="." method="_on_detect_player_body_exited"]
